--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <header class="bg-amber-100 p-32">
+      <nav></nav>
+      <!-- banner section -->
+      <div class="flex justify-center items-center">
+        <div>
+          <h1 class="text-7xl uppercase">
+            <span class="text-[#fabe4c]">be the penguins</span> <br />
+            of winter
+          </h1>
+          <p class="text-lg my-7">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia porro,
+            quod quis veritatis suscipit accusantium.
+          </p>
+          <button>Buy Now</button>
+        </div>
+        <div>
+          <img src="images/model.png" alt="" />
+        </div>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
