--- a/index.html
+++ b/index.html
@@ -4,21 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+      .font-bebas {
+        font-family: "Bebas Neue", sans-serif;
+      }
+      .font-roboto {
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
   </head>
   <body>
-    <header class="bg-amber-100 p-32">
+    <header class="bg-amber-100 py-24 px-4 md:px-32">
       <nav></nav>
       <!-- banner section -->
-      <div class="flex justify-center items-center">
-        <div>
-          <h1 class="text-7xl uppercase">
+      <div class="flex flex-col md:flex-row justify-between items-center">
+        <div class="space-y-3">
+          <h1 class="text-7xl uppercase font-bebas">
             <span class="text-[#fabe4c]">be the penguins</span> <br />
             of winter
           </h1>
-          <p class="text-lg my-7">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia porro,
-            quod quis veritatis suscipit accusantium.
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+            Quia porro, quod quis veritatis suscipit accusantium.
           </p>
           <button
             class="py-4 px-9 bg-gradient-to-r from-violet-500 to-fuchsia-500 rounded-md uppercase font-medium text-white"
@@ -44,7 +65,22 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main class="max-w-8xl mx-auto">
+      <section class="py-12">
+        <h3 class="text-5xl font-bebas">Woman Jackets</h3>
+        <div>
+          <!-- jacket -1 -->
+          <div>
+            <img src="images/jacket-1.png" alt="" />
+            <h4 class="text-2xl">Yellow Coat Jacket.</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
+              ullam.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
