--- a/index.html
+++ b/index.html
@@ -68,15 +68,36 @@
     <main class="max-w-8xl mx-auto">
       <section class="py-12">
         <h3 class="text-5xl font-bebas">Woman Jackets</h3>
-        <div>
+        <div class="font-roboto">
           <!-- jacket -1 -->
           <div>
             <img src="images/jacket-1.png" alt="" />
-            <h4 class="text-2xl">Yellow Coat Jacket.</h4>
+            <h4 class="text-2xl font-bold">Yellow Coat Jacket.</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
               ullam.
             </p>
+            <div class="flex">
+              <h3 class="text-4xl font-black text-orange-400">$345</h3>
+              <button
+                class="py-4 px-9 bg-gradient-to-r from-violet-500 to-fuchsia-500 rounded-md uppercase font-medium text-white"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="inline mr-2 w-6 h-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  /></svg
+                >Buy Now
+              </button>
+            </div>
           </div>
         </div>
       </section>
